--- a/m.naver/index.html
+++ b/m.naver/index.html
@@ -254,6 +254,124 @@
 	
 	
 	
+	<div id="talk">
+		<ul>
+			<li class="left-list">
+				<a href="#">
+					<i class="icon-arrow icon-arrow-left"></i>
+					<div class="content-wrap">
+						<div class="txt-wrap">
+							<h3>패션뷰티판</h3>
+							<p>
+								동해물과 백두산이<br>
+								마르고 닳도록
+							</p>
+						</div>
+						<img src="https://via.placeholder.com/52">
+					</div>
+				</a>
+			</li>
+			<li class="left-list">
+				<a href="#">
+					<i class="icon-arrow icon-arrow-left"></i>
+					<div class="content-wrap">
+						<div class="txt-wrap">
+							<h3>패션뷰티판</h3>
+							<p>
+								동해물과 백두산이<br>
+								마르고 닳도록
+							</p>
+						</div>
+						<img src="https://via.placeholder.com/52">
+					</div>
+				</a>
+			</li>
+			
+			<li class="right-list">
+				<a href="#">
+					<div class="content-wrap">
+						<img src="https://via.placeholder.com/52">
+						<div class="txt-wrap">
+							<h3>패션뷰티판</h3>
+							<p>
+								동해물과 백두산이<br>
+								마르고 닳도록
+							</p>
+						</div>
+					</div>
+					<i class="icon-arrow icon-arrow-right"></i>
+				</a>
+			</li>
+			<li class="right-list">
+				<a href="#">
+					<div class="content-wrap">
+						<img src="https://via.placeholder.com/52">
+						<div class="txt-wrap">
+							<h3>패션뷰티판</h3>
+							<p>
+								동해물과 백두산이<br>
+								마르고 닳도록
+							</p>
+						</div>
+					</div>
+					<i class="icon-arrow icon-arrow-right"></i>
+				</a>
+			</li>
+		</ul>
+	</div>
+	
+	
+	
+	<div id="today">
+		<div class="container">
+			
+			<div class="content-header">
+				<h2>오늘의 네이버</h2>
+				<a href="#"></a>
+			</div>
+			
+			<div class="content-body">
+				<img class="banner" src="https://via.placeholder.com/345x140">
+				<div class="bottom-wrap">
+					<i class="icon"></i>
+					<div class="txt-wrap">
+						<h3>클로바 램프 최대 42% 혜택</h3>
+						<p>
+							동해물과 백두산이 마르고 닳도록<br>
+							하나님이 보우하사 길이 보전하세
+						</p>
+					</div>
+				</div>
+			</div>
+			
+		</div>
+	</div>
+	
+	
+	
+	<footer id="footer">
+		
+		<div class="txt-wrap">
+			<div class="link">
+				<a href="#">로그인</a>
+				<a href="#">전체서비스</a>
+				<a href="#">PC버전</a>
+			</div>
+			<div class="link">
+				<a href="#">이용약관</a>
+				<a href="#">개인정보처리방침</a>
+				<a href="#">고객센터</a>
+			</div>
+		</div>
+		
+		<h1>
+			<a href="#">
+				<img src="https://via.placeholder.com/74x14">
+			</a>
+		</h1>
+		
+	</footer>
+	
 	
 	
 </div>
